# epoch-permutation

./: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
.config/: .markdownlint-cli2.jsonc  .prettierignore  .prettierrc  eslint.config.mjs
.config/.husky/: pre-commit
assets/: permutation-scatter-epochs.json
implementations/: README.md
implementations/aptos/: Move.toml  README.md
implementations/aptos/sources/: epoch_permutation.move
implementations/evm/: README.md
implementations/evm/contracts/: EpochPermutation.sol
implementations/evm/scripts/: benchmarkPermutationGas.ts  localPermutationVerification.ts  runLocalPermutationVerification.cjs  runPermutationGasBenchmark.cjs
implementations/evm/test/: EpochPermutation.test.ts  PermutationBatchHarness.test.ts  PermutationBenchmarkAlgorithms.test.ts
implementations/js/: README.md
implementations/js/scripts/: rngStress.cjs
implementations/js/src/: EpochPermutation.js  config.js  hash.js
implementations/rust/: Cargo.toml  README.md
implementations/rust/core/: Cargo.toml
implementations/rust/core/src/: lib.rs
implementations/rust/cosmwasm/: Cargo.toml
implementations/rust/cosmwasm/src/: lib.rs
implementations/rust/scripts/: runCargo.cjs
implementations/rust/solana/: Cargo.toml
implementations/starknet/: README.md  Scarb.toml
implementations/starknet/src/: lib.cairo
implementations/sui/: Move.toml  README.md
implementations/tooling/: runExternal.cjs
scripts/: clean.cjs
scripts/docs/: renderHowItWorksDiagrams.cjs  renderPermutationScatter.cjs
(+39 files in other folders)
